# promocode_generator

./: README.md  db.sqlite3  pyproject.toml
djangoProject/: settings.py
promocodegen/: admin.py  apps.py  models.py  tests.py
promocodegen/management/commands/: checkuniquecodes.py  generatepromo.py
